[tool.poetry]
name = "cxs-examples-py"
version = "0.1.0"
description = "Examples for interacting with Concentrix CXS's APIs"
authors = ["David Moffett <david.moffett@convergys.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
httpx = "^0.16.1"
websockets = "^8.1"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
example = "cxs_examples_py.main:run_example"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
